k8s/dvr/overlays/picard/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: app
          ports:
            - name: http
              containerPort: 5800
          volumeMounts:
            - name: downloads
              mountPath: /config
              subPath: config/picard
            - name: downloads
              mountPath: /storage
              subPath: music
