k8s/dvr/overlays/picard/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 5800
      protocol: TCP
      targetPort: http
